@@ -4,6 +4,7 @@ downloader with image filtering and Metalink support (version 0.6.0, beta)
 
 2011/07/07 Emanuele <pocoyo@users.sourceforge.net>
 	* don't verify peer and host when connecting over SSL
+	* a new check on metalink files has been added. If the chunk length doesn't match, generate an error
 
 2011/07/03 Emanuele <pocoyo@users.sourceforge.net>
 	* large file support has been added
